-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
Lustre 2.4.0
-
2.6.32-279.22.1.el6 (CentOS6.3), OFED-3.5
-
3
-
7246
http://review.whamcloud.com/#change,3011 introduces OFED-3.5 support, but build fails on the latest RHEL6's updated kenrel 2.6.32-279.22.1.el6.x86_64 due to two functions are defined in that kenrel against OFED compat header.
CC [M] /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.o
In file included from /usr/src/compat-rdma/include/linux/compat-2.6.h:53,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.h:73,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.c:41:
/usr/src/compat-rdma/include/linux/compat-2.6.34.h:290:1: error: "rcu_dereference_protected" redefined
In file included from include/linux/tracepoint.h:18,
from /usr/src/compat-rdma/include/linux/tracepoint.h:19,
from include/linux/module.h:18,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.h:41,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.c:41:
include/linux/rcupdate.h:256:1: error: this is the location of the previous definition
In file included from /usr/src/compat-rdma/include/linux/compat-2.6.h:59,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.h:73,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.c:41:
/usr/src/compat-rdma/include/linux/compat-3.0.h:90:1: error: "kfree_rcu" redefined
In file included from include/linux/tracepoint.h:18,
from /usr/src/compat-rdma/include/linux/tracepoint.h:19,
from include/linux/module.h:18,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.h:41,
from /root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.c:41:
include/linux/rcupdate.h:389:1: error: this is the location of the previous definition
make[7]: *** [/root/lustre-2.3.62/lnet/klnds/o2iblnd/o2iblnd.o] Error 1
make[6]: *** [/root/lustre-2.3.62/lnet/klnds/o2iblnd] Error 2
make[5]: *** [/root/lustre-2.3.62/lnet/klnds] Error 2
make[4]: *** [/root/lustre-2.3.62/lnet] Error 2
make[3]: *** [_module_/root/lustre-2.3.62] Error 2
make[3]: Leaving directory `/usr/src/kernels/2.6.32-279.22.1.el6.x86_64'
make[2]: *** [modules] Error 2
- is related to
-
LU-1468 Support Compat RDMA for O2IB
-
- Resolved
-