LU-2975 build: Build fails due to two functions redefined

Build with OFED-3.5 fails on 2.6.32-279.22.1.el6.x86_64 due to two
functions(rcu_dereference_protected, kfree_rcu) are defined
in include/linux/rcupdate.h against OFED compat header's define.
This is caused by the kernel header changes on the latest version.

Signed-off-by: Shuichi Ihara <sihara@ddn.com>
Change-Id: Ic56effc6a528a4d000cb753f3d358fe6a3c62220